# talks

./: .gitignore  .gitmodules  pyproject.toml  readme.md
.github/: dependabot.yml  talks-config.yml
.github/workflows/: formatting.yml  latex.yml  markup.yml  mdslides_deprecated.yml  ruff.yml  slides-wip.yml  slides.yml
code/py/: logistic_map.py
scripts/: build-talks.sh  build.py  generate-index.sh  local-serve.sh  preprocess.py  readme.md  validate-build.sh
talks/0000-demo/: readme.md  slides.md
talks/2601-cicd/: slides.md
talks/2605-ge/: slides.md
templates/: config.json  index-template.html  readme.md  slides-template.html
templates/assets/: index-style.css  ldm-toggle.js  my-classes.css  my-style.css  slides-style.css  theme-toggle.js
